--- a/dataViz.html
+++ b/dataViz.html
@@ -6,7 +6,7 @@
 
 var width = 960,
     height = 500,
-    padding = 1.5, // separation between same-color nodes
+    padding = 0.5, // separation between same-color nodes
     clusterPadding = 6, // separation between different-color nodes
     maxRadius = 12;
 
@@ -21,7 +21,7 @@ var clusters = new Array(m);
 
 var nodes = d3.range(n).map(function() {
   var i = Math.floor(Math.random() * m),
-      r = Math.sqrt((i + 1) / m * -Math.log(Math.random())) * maxRadius,
+      r = m,
       d = {cluster: i, radius: r};
   if (!clusters[i] || (r > clusters[i].radius)) clusters[i] = d;
   return d;
@@ -41,7 +41,7 @@ var force = d3.layout.force()
     .nodes(nodes)
     .size([width, height])
     .gravity(.02)
-    .charge(0)
+    .charge(1)
     .on("tick", tick)
     .start();
 
@@ -51,9 +51,10 @@ var svg = d3.select("body").append("svg")
 
 var node = svg.selectAll("circle")
     .data(nodes)
-  .enter().append("circle")
+    .enter().append("circle")
     .style("fill", function(d) { return color(d.cluster); })
-    .call(force.drag);
+    .call(force.drag)
+    .on("mousedown", function() { d3.event.stopPropagation(); });
 
 node.transition()
     .duration(750)
@@ -62,6 +63,7 @@ node.transition()
       var i = d3.interpolate(0, d.radius);
       return function(t) { return d.radius = i(t); };
     });
+
 
 function tick(e) {
   node
