--- a/dataViz.html
+++ b/dataViz.html
@@ -13,6 +13,8 @@ var width = 960,
 var n = 200, // total number of nodes
     m = 10; // number of distinct clusters
 
+
+// need to distinguish color by framework
 var color = d3.scale.category10()
     .domain(d3.range(m));
 
@@ -52,6 +54,7 @@ var svg = d3.select("body").append("svg")
 var node = svg.selectAll("circle")
     .data(nodes)
     .enter().append("circle")
+    // Need an if statement where each node gets color based on framwork
     .style("fill", function(d) { return color(d.cluster); })
     .call(force.drag)
     .on("mousedown", function() { d3.event.stopPropagation(); });
