--- a/dataViz.html
+++ b/dataViz.html
@@ -2,9 +2,8 @@
 <html>
 <head>
   <title>Gitit</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-  <script src="./d3DataViz.js"></script>
+  <script src="bundle.js"></script>
 </head>
 <body>
 
