--- a/Gitit.html
+++ b/Gitit.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Gitit</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-  <script src="bundle.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+  <script src="d3DataViz.js"></script>
 </head>
+
 <body>
 </body>
+
 </html>
