--- a/Client/Gitit.html
+++ b/Client/Gitit.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Gitit</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
-  <script src="bundle.js"></script>
+  <script src="d3DataViz.js"></script>
 </head>
 
 <body>
