--- a/Client/index.html
+++ b/Client/index.html
@@ -40,7 +40,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-  <!--<script src="d3DataViz.js"></script>-->
+  <script src="d3DataViz.js"></script>
   <script src="linechart.js"></script>
   <script src="bar.js"></script>
 
