--- a/Client/index.html
+++ b/Client/index.html
@@ -9,7 +9,8 @@
   <style>
     #bar-chart div {
       font: 10px sans-serif;
-      background-color: steelblue;
+      /*background-color: steelblue;*/
+      
       text-align: right;
       padding: 3px;
       margin: 1px;
