renaming bar.js to bar-chart.js

--- a/Client/index.html
+++ b/Client/index.html
@@ -42,7 +42,7 @@
 
   <script src="d3DataViz.js"></script>
   <script src="linechart.js"></script>
-  <script src="bar.js"></script>
+  <script src="bar-chart.js"></script>
 
 </head>
 < body class="index">
