--- a/Client/index.html
+++ b/Client/index.html
@@ -71,6 +71,7 @@
   <!-- Header -->
   <header>
     <div class="container">
+      <button id="bubbleChartButton">Bubble Chart</button><button id="barGraphButton">Bar Graph</button><button id="lineGraphButton">Line Graph</button>
     <div id="statCounts">Number of Repo Occurences<br></div>
       <div class="row">
         <div class="col-lg-12">
