adding page style

--- a/Client/index.html
+++ b/Client/index.html
@@ -69,15 +69,15 @@
   </nav>
 
   <header>
-    <div class="container">
+    <div class="container" >
       <button id="bubbleChartButton">Bubble Chart</button><button id="barGraphButton">Bar Graph</button><button id="lineGraphButton">Line Graph</button>
-    <div id="statCounts">Number of Repo Occurences<br></div>
       <div class="row">
-        <div class="col-lg-12">
-          <div class="intro-text">
+    <div class="col-md-4" id="statCounts">Number of Repo Occurences<br></div>
+    
+          <div id="text" class="col-md-8">
 
           
-            <div id="chart" class="col-md-4"></div>
+            <div id="chart" ></div>
             <div id="bar-chart"></div>
             <svg id="line-chart" width="1000px" height="720px">
           </div>
