--- a/Client/about.html
+++ b/Client/about.html
@@ -59,7 +59,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <div class="intro-text">
+          <div id="text">
             
 
             
