somesort of merge

--- a/Client/index.html
+++ b/Client/index.html
@@ -45,6 +45,7 @@
   <script src="bar-chart.js"></script>
 
 </head>
+
 <body class="index">
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
@@ -70,13 +71,17 @@
 
   <header>
     <div class="container">
-      <button id="bubbleChartButton">Bubble Chart</button><button id="barGraphButton">Bar Graph</button><button id="lineGraphButton">Line Graph</button>
-    <div id="statCounts">Number of Repo Occurences<br></div>
+      <button id="bubbleChartButton">Bubble Chart</button>
+      <button id="barGraphButton">Bar Graph</button>
+      <button id="lineGraphButton">Line Graph</button>
+      <div id="statCounts">Number of Repo Occurences
+        <br>
+      </div>
       <div class="row">
         <div class="col-lg-12">
           <div class="intro-text">
 
-          
+
             <div id="chart" class="col-md-4"></div>
             <div id="bar-chart"></div>
             <div id="line-chart"></div>
@@ -90,6 +95,6 @@
 
 
   </footer>
-  </body>
+</body>
 
 </html>
