--- a/Client/index.html
+++ b/Client/index.html
@@ -26,23 +26,16 @@
       font-size: 13px;
     }
   </style>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+
 
   <!-- Custom CSS -->
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link href="style.css" rel="stylesheet">
-  <!-- Custom Fonts -->
+
   <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="//code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
-  <script src="d3DataViz.js"></script>
-  <script src="line-chart.js"></script>
-  <script src="bar-chart.js"></script>
+  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 
 </head>
 <body class="index">
@@ -70,16 +63,18 @@
 
   <header>
     <div class="container" >
-      <button id="bubbleChartButton">Bubble Chart</button><button id="barGraphButton">Bar Graph</button><button id="lineGraphButton">Line Graph</button>
       <div class="row">
     <div class="col-md-4" id="statCounts">Number of Repo Occurences<br></div>
     
           <div id="text" class="col-md-8">
-
             <div id="chart" ></div>
             <div id="bar-chart" ></div>
             <div id="line-chart"></div>
           </div>
+<!--       <div class="col-md-4"> -->
+        
+      <button id="bubbleChartButton" >Bubble Chart</button><button id="barGraphButton" >Bar Graph</button><button id="lineGraphButton" >Line Graph</button>
+<!--       </div>   -->        
         </div>
       </div>
     </div>
@@ -89,6 +84,13 @@
 
 
   </footer>
+  <!-- JavaScript Files -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="d3DataViz.js"></script>
+  <script src="line-chart.js"></script>
+  <script src="bar-chart.js"></script>
   </body>
 
 </html>
