--- a/Client/index.html
+++ b/Client/index.html
@@ -6,37 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gitit</title>
-  <style>
-    #bar-chart div {
-      font: 10px sans-serif;
-      /*background-color: steelblue;*/
-      
-      text-align: right;
-      padding: 3px;
-      margin: 1px;
-      color: black;
-    }
-    .axis path {
-      fill: none;
-      stroke: #777;
-      shape-rendering: crispEdges;
-    }
-    .axis text {
-      font-family: Lato;
-      font-size: 13px;
-    }
-  </style>
-
 
   <!-- Custom CSS -->
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link href="style.css" rel="stylesheet">
-
-  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="//code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
-  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:400,700">
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic">
+  <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
+  <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 </head>
 
 <body class="index">
@@ -58,38 +35,37 @@
           </li>
         </ul>
       </div>
-
     </div>
   </nav>
 
   <header>
-
     <div class="container">
       <div class="row">
         <div class="col-md-4" id="statCounts">Number of Repo Occurences
           <br>
         </div>
-
         <div id="text" class="col-md-8">
           <div id="chart"></div>
           <div id="bar-chart"></div>
           <div id="line-chart"></div>
         </div>
-        <!--       <div class="col-md-4"> -->
-
-        <button id="bubbleChartButton">Bubble Chart</button>
-        <button id="barGraphButton">Bar Graph</button>
-        <button id="lineGraphButton">Line Graph</button>
-        <!--       </div>   -->
+        <!-- <div class="col-md-4"> -->
+        <!-- </div> -->
       </div>
-    </div>
-    </div>
+      <div class="row">
+        <div class="col-md-8">
+          <button id="bubbleChartButton">Bubble Chart</button>
+          <button id="barGraphButton">Bar Graph</button>
+          <button id="lineGraphButton">Line Graph</button>
+        </div>
+        <div class="col-md-4">
+        </div>
+      </div>
     </div>
   </header>
 
   <footer>
-
-
+    <div>this is a footer!!</div>
   </footer>
 
   <!-- JavaScript Files -->
