adding bootstrap styles to buttons, adding bubble-chart and main js

--- a/Client/index.html
+++ b/Client/index.html
@@ -45,7 +45,7 @@
           <br>
         </div>
         <div id="text" class="col-md-8">
-          <div id="chart"></div>
+          <div id="bubble-chart"></div>
           <div id="bar-chart"></div>
           <div id="line-chart"></div>
         </div>
@@ -54,9 +54,9 @@
       </div>
       <div class="row">
         <div class="col-md-8">
-          <button id="bubbleChartButton">Bubble Chart</button>
-          <button id="barGraphButton">Bar Graph</button>
-          <button id="lineGraphButton">Line Graph</button>
+          <button id="bubbleChartButton" class="btn btn-default">Bubble Chart</button>
+          <button id="barGraphButton" class="btn btn-default">Bar Graph</button>
+          <button id="lineGraphButton" class="btn btn-default">Line Graph</button>
         </div>
         <div class="col-md-4">
         </div>
@@ -72,9 +72,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <script src="d3DataViz.js"></script>
+  <script src="bubble-chart.js"></script>
   <script src="line-chart.js"></script>
   <script src="bar-chart.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
