Opens personal githubs in new tabs now

--- a/Client/about.html
+++ b/Client/about.html
@@ -60,7 +60,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="text">
-            GOGITiT is a group thesis project by <a href='https://github.com/fusupo'>Marc Christophe</a>, <a href='https://github.com/dhernz'>Doris Hernandez</a>, <a href='https://github.com/demesheo'>Demesheo Wilson</a>, and <a href='https://github.com/Ryan-McBride'>Ryan McBride</a> at Telegraph Academy. GitHub has no means to provide information about what frameworks are being used. The goal of this project is to gather and parse GitHub repository information to create accurate usage metrics of JavaScript frontend frameworks. 
+            GOGITiT is a group thesis project by <a href='https://github.com/fusupo' target="_blank">Marc Christophe</a>, <a href='https://github.com/dhernz' target="_blank">Doris Hernandez</a>, <a href='https://github.com/demesheo' target="_blank">Demesheo Wilson</a>, and <a href='https://github.com/Ryan-McBride' target="_blank">Ryan McBride</a> at Telegraph Academy. GitHub has no means to provide information about what frameworks are being used. The goal of this project is to gather and parse GitHub repository information to create accurate usage metrics of JavaScript frontend frameworks. 
           </br>
           To achieve this goal we used Google BigQuery to retrieve daily activity from GitHub for all javascript repos. We would then use GitHub's API to fetch files to use as framework identifiers. By parsing through the package.json and index.html files of each repo we keep individual records of the frameworks being used and keep a cumulative count of the occurences to display using a series of D3 data visualization graphs.
         </br> 
