adding style to page

--- a/Client/index.html
+++ b/Client/index.html
@@ -73,8 +73,10 @@
           </div>
 <!--       <div class="col-md-4"> -->
         
-      <button id="bubbleChartButton" >Bubble Chart</button><button id="barGraphButton" >Bar Graph</button><button id="lineGraphButton" >Line Graph</button>
-<!--       </div>   -->        
+      <button id="bubbleChartButton" class="pure-button" >Bubble Chart</button>
+      <button id="barGraphButton" class="pure-button" >Bar Graph</button>
+      <button id="lineGraphButton" class="pure-button" >Line Graph</button>
+      </div>          
         </div>
       </div>
     </div>
