--- a/Client/index.html
+++ b/Client/index.html
@@ -45,7 +45,7 @@
           <br>
         </div>
         <div id="text" class="col-md-8">
-          <div id="bubble-chart"></div>
+          <div id="bubble-chart"><br><p style="font-size: 10px">Each bubble represents 10 repos, rounded up</p></div>
           <div id="bar-chart"></div>
           <div id="line-chart"></div>
         </div>
