--- a/Client/index.html
+++ b/Client/index.html
@@ -46,7 +46,6 @@
         </div>
         <div id="text" class="col-md-8">
           <div id="bubbles">
-          <br><p style="font-size: 10px">Each bubble represents 10 repos, rounded up</p>
           <div id="bubble-chart"></div>
           </div>
           <div id="bar-chart"></div>
@@ -56,6 +55,7 @@
       </div>
       <div class="row">
         <div class="col-md-8">
+          <p style="font-size: 12px">Each bubble represents 10 repos, rounded up</p>
           <button id="bubbleChartButton" class="btn btn-default">Bubble Chart</button>
           <button id="barGraphButton" class="btn btn-default">Bar Graph</button>
           <button id="lineGraphButton" class="btn btn-default">Line Graph</button>
