--- a/Client/about.html
+++ b/Client/about.html
@@ -78,7 +78,7 @@
     </div>
   </div>
 </header>
-<script src="./tally-total.js"</script>
+<script src="./tally-total.js"></script>
 </body>
 </html>
 
