changed style to class

--- a/Client/index.html
+++ b/Client/index.html
@@ -55,7 +55,7 @@
       </div>
       <div class="row">
         <div class="col-md-8">
-          <p style="disclaimer">Each bubble represents 10 repos, rounded up</p>
+          <p class="disclaimer">Each bubble represents 10 repos, rounded up</p>
           <p class="disclaimer">Original bubble visualization by <a href="http://bl.ocks.org/mbostock/7882658">Mike Bostock</a></p>
           <button id="bubbleChartButton" class="btn btn-default">Bubble Chart</button>
           <button id="barGraphButton" class="btn btn-default">Bar Graph</button>
