--- a/Client/about.html
+++ b/Client/about.html
@@ -46,7 +46,7 @@
         </li>
         <li class="active">
           <li class="page-scroll  active">
-            <a href="about.html">About</a>
+            <a href="index.html">Home</a>
           </li>
         </ul>
       </div>
