--- a/Client/index.html
+++ b/Client/index.html
@@ -60,12 +60,32 @@
       </div>
     </div>
   </header>
-
-  <footer>
-
-     <a href="https://github.com/Gitit-TGA/Gitit"><img src="GitHub-Mark-64px.png"></a>
+<footer class="text-center">
+    <div class="footer-above">
+      <div class="container">
+        <div class="row">
+          <div class="footer-col col-md-4">
+            <h3>The Project</h3>
+            <p>Data Driven JavaScript Popular Framework Information</p>
+          </div>
+          <div class="footer-col col-md-4">
+            <h3>Check us out on GitHub</h3>
+            <ul class="list-inline">
+              <li>
+                <a href="https://github.com/Go-GITiT/Go-GITiT" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-col col-md-4">
+            <h3>About</h3>
+            <p>Open source project created by <a href="https://github.com/Go-GITiT/Go-GITiT">GoGITiT Team</a>.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
   </footer>
+
 
   <!-- JavaScript Files -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
