--- a/Client/about.html
+++ b/Client/about.html
@@ -59,21 +59,35 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <div class="text">
-            GOGITiT is a group thesis project by <a href='https://github.com/fusupo' target="_blank">Marc Christophe</a>, <a href='https://github.com/dhernz' target="_blank">Doris Hernandez</a>, <a href='https://github.com/demesheo' target="_blank">Demesheo Wilson</a>, and <a href='https://github.com/Ryan-McBride' target="_blank">Ryan McBride</a> at Telegraph Academy. GitHub has no means to provide information about what frameworks are being used. The goal of this project is to gather and parse GitHub repository information to create accurate usage metrics of JavaScript frontend frameworks. 
+          <table>
+            <tr>
+              <td>REPOS PARSED: </td>
+              <td style="padding-left: 10px" class="total totals">A LOT</td>
+            </tr>
+            <tr>
+              <td>INDEX.HTML: </td>
+              <td style="padding-left: 10px"class="indices totals">TONS</td>
+            </tr>
+            <tr>
+              <td>PACKAGE.JSON: </td>
+              <td class="packages totals">MANY</td>
+            </tr>
+          </table>
           </br>
-          To achieve this goal we used Google BigQuery to retrieve daily activity from GitHub for all javascript repos. We would then use GitHub's API to fetch files to use as framework identifiers. By parsing through the package.json and index.html files of each repo we keep individual records of the frameworks being used and keep a cumulative count of the occurences to display using a series of D3 data visualization graphs. To date we have parsed <span class="indices totals"></span> index files and <span class="packages totals"></span> package files across <span class="total totals"></span> repositories. 
-        </br> 
+          <p class="text">
+            GOGITiT is a group thesis project by <a href='https://github.com/fusupo' target="_blank">Marc Christophe</a>, <a href='https://github.com/dhernz' target="_blank">Doris Hernandez</a>, <a href='https://github.com/demesheo' target="_blank">Demesheo Wilson</a>, and <a href='https://github.com/Ryan-McBride' target="_blank">Ryan McBride</a> at Telegraph Academy. GitHub has no means to provide information about what frameworks are being used. The goal of this project is to gather and parse GitHub repository information to create accurate usage metrics of JavaScript frontend frameworks. 
+          </p>
+          <p class="text">
+            To achieve this goal we used Google BigQuery to retrieve daily activity from GitHub for all javascript repos. We would then use GitHub's API to fetch files to use as framework identifiers. By parsing through the package.json and index.html files of each repo we keep individual records of the frameworks being used and keep a cumulative count of the occurences to display using a series of D3 data visualization graphs. 
+          </p> 
+        </div>
       </div>
+    </div> 
+    <div class="row">
+      <center>OUR STACK</center>
+        <img class="col-xs-12"src='./stack.png'/>
     </div>
-  </div>
-  <div class="row">
-    </br>
-    OUR STACK
-      <img class="col-xs-12"src='./stack.png'/>
-    </div>
-  </div>
-</header>
+  </header>
 <script src="./tally-total.js"></script>
 </body>
 </html>
