adding the final footer

--- a/Client/index.html
+++ b/Client/index.html
@@ -23,7 +23,7 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
         </button>
-        <img class="col-xs-6 " src="gititlogo.png">
+        <img class="col-xs-6 " src="./images/gititlogo.png">
         </a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -64,19 +64,19 @@
       </div>
     </div>
   </header>
-<footer class="text-center">
+<footer class="text-center navbar-default">
     <div class="footer-above">
       <div class="container">
         <div class="row">
           <div class="footer-col col-md-4">
             <h3>The Project</h3>
-            <p>Data Driven JavaScript Popular Framework Information</p>
+            <p>Data Visualization of Popular JavaScript Front End Frameworks</p>
           </div>
           <div class="footer-col col-md-4">
             <h3>Check us out on GitHub</h3>
             <ul class="list-inline">
               <li>
-                <a href="https://github.com/Go-GITiT/Go-GITiT" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+                <a href="https://github.com/Go-GITiT/Go-GITiT" class="btn-social btn-outline"><img src="./images/octocat.png" width="40" height="40"></a>
               </li>
             </ul>
           </div>
