--- a/Client/about.html
+++ b/Client/about.html
@@ -38,7 +38,7 @@
           <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
         </button>
         <a href="index.html">
-          <img class="col-xs-6 " src="gititlogo.png" >
+          <img class="col-xs-6 " src="./images/gititlogo.png" >
         </a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
