adding about page

--- a/Client/about.html
+++ b/Client/about.html
@@ -86,6 +86,8 @@
        </p>
       </div>
     </div>
+    <h2>Cool Statistics</h2>
+    <br>
     <div class="table-responsive">
       <table class="table-striped">
         <tr>
@@ -98,7 +100,7 @@
         </tr>
         <tr>
           <td>PACKAGE.JSON: </td>
-          <td class="packages totals">MANY</td>
+          <td style="padding-left: 10px" class="packages totals">MANY</td>
         </tr>
       </table>
     </div>
