--- a/Client/index.html
+++ b/Client/index.html
@@ -45,8 +45,8 @@
         </div>
         <div id="text" class="col-md-8">
           <div id="bubbles">
-            <div class="bubbleText">
-              Accumulative Data of All Time
+            <div class="graphText">
+              Accumulated Data Since 2015-09-09
               </br>
               Each bubble represents <span id="scaleFactor"></span> repos
               </br>
