Added link to solution

--- a/Client/about.html
+++ b/Client/about.html
@@ -71,7 +71,7 @@
           </p>    
 
 
-          <h2>Solution</h2>
+          <a id="solution"><h2>Solution</h2></a>
 
           <p>  To achieve this goal we used Google BigQuery to retrieve daily activity from GitHub for all javascript repos. We would then use GitHub's API to fetch files to use as framework identifiers.
 
