--- a/Client/index.html
+++ b/Client/index.html
@@ -75,7 +75,7 @@
           <div class="footer-col col-md-4">
             <h3>The Project</h3>
             <p>Data Visualization of Popular JavaScript Front End Frameworks</p><br>
-            <a href="about.html/#solution">Methodology</a>
+            <a href="about.html#solution">Methodology</a>
           </div>
           <div class="footer-col col-md-4">
             <h3>Check us out on GitHub</h3>
