--- a/Client/about.html
+++ b/Client/about.html
@@ -64,14 +64,14 @@
           <h4>Data Visualization of Popular JavaScript Front End Frameworks</h4>
           <p>GoGitit is a node project that leverages the Google BigQuery API and Github's API to gather data about the usage statistics of different front-end frameworks</p>
 
+          <div id="solution"></div>
           <h2>The Problem</h2>
 
           <p>
             GitHub has no means to provide information about what frameworks are being used. The goal of this project is to gather and parse GitHub repository information to create accurate usage metrics of JavaScript frontend frameworks. 
           </p>    
 
-
-          <a id="solution"><h2>Solution</h2></a>
+          <h2>Solution</h2>
 
           <p>  To achieve this goal we used Google BigQuery to retrieve daily activity from GitHub for all javascript repos. We would then use GitHub's API to fetch files to use as framework identifiers.
 
