--- a/Client/index.html
+++ b/Client/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic">
   <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
+  <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 
 <body class="index">
